--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
     "express": "^4.18.2",
+    "flowbite": "^2.5.2",
     "material": "^0.9.20",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
